tests/fixtures/fail/strict-files-violation/src/forbidden.js
// Not allowed - should be .ts
